pootle/static/css/style.css
/* ... */
html[dir="ltr"] ul.pager li:last-child > *
{
    padding-right: 1em;
    -webkit-border-radius: 0 1em 1em 0;
       -moz-border-radius: 0 1em 1em 0;
            border-radius: 0 1em 1em 0;
}

html[dir="rtl"] ul.pager li:first-child > *
{
    padding-right: 1em;
    -webkit-border-radius: 0 1em 1em 0;
       -moz-border-radius: 0 1em 1em 0;
            border-radius: 0 1em 1em 0;
}

html[dir="rtl"] ul.pager li:last-child > *
{
    padding-left: 1em;
    -webkit-border-radius: 1em 0 0 1em;
       -moz-border-radius: 1em 0 0 1em;
            border-radius: 1em 0 0 1em;
}


/*
 * OVERVIEW PAGE
 */

#overview-actions li
{
    background-color: inherit;
}

.overview-actions-container
{
    padding: 1em 0;
    border-top: 1px solid #eee;
}

.overview-actions-container.first
{
    border-top: 0 none;
}

.overview-actions-group
{
    width: 20%;
    font-size: 85%;
    float: left;
}

html[dir="rtl"] .overview-actions-group
{
    float: right;
}

.overview-actions-content
{
    width: 75%;
    margin-left: 25%;
}

html[dir="rtl"] .overview-actions-content
{
    margin-left: 0;
    margin-right: 25%;
}

#overview-actions-translate-offline a
{
    color: #cc6633;
}

#overview-actions-translate-offline li
{
    display: inline;
}

#overview-actions-translate-offline li.odd
{
    margin-right: 25%;
}

html[dir="rtl"] #overview-actions-translate-offline li.odd
{
    margin-right: 0;
    margin-left: 25%;
}

#overview-actions-manage a
{
    color: #cc3366;
}

.overview-description-toggle
{
    display: block;
    float: right;
    position: relative;
    text-align: right;
    top: 1.5em;
}

html[dir="rtl"] .overview-description-toggle
{
    text-align: left;
}

#overview-description-tp,
#overview-description-project,
#overview-description-language
{
    margin: 1em 0;
}

/* Inline editing */

.markup-body:hover .js-edit-details
{
    visibility: visible;
}


/*
 * HEADER
 */

.header
{
    padding: 0 1.5em;
    border-bottom: 1px solid #d9d9d9;
}

#header-tabs
{
    border-bottom: 1px solid #D9D9D9;
}

#header-meta
{
    min-height: 50px;
    line-height: 2.7;
}

/*
 * HEADER STATS
 */

#top-stats
{
    padding-bottom: 1.5em;
}

#top-stats .label
{
    margin-top: -1.1em;
    width: 8em;
    padding-bottom: 0.5em;
}

#top-stats a
{
    position: relative;
}

.icon-collapse-stats,
.icon-expand-stats
{
    display: inline-block;
    position: absolute;
    top: -4px;
    left: -1px;
    z-index: 1;
}

#progressbar
{
    margin-left: 10px;
}

#progressbar table.graph
{
    width: 100%;
}

.path-summary-more
{
    padding: 0 2em;
    display: none;
    border: 1px solid #d9d9d9;    
    background: #f4f4f4;

    -webkit-border-radius: 0 0 5px 5px;
       -moz-border-radius: 0 0 5px 5px;
            border-radius: 0 0 5px 5px;
}

.path-summary-more table
{
    width: 40em;
}

.path-summary-more td.stats-number
{
    padding-right: 3em !important;
}

/*
 * HEADER ACTIONS
 */

#actions
{
    padding-bottom: 1em;
}

#translate-actions
{
    display: inline-block;
    position: relative;
    top: 4px;
}

#translate-actions a
{
    text-decoration: none;
    color: #000;
}

#translate-actions ul
{
    display: inline-block;
    list-style-type: none;
}

#translate-actions li
{
    display: inline-block;
    margin-left: 2em;
    font-weight: bold;
}

body.js-not-loaded #translate-actions li {
    display: none;
}

#translate-actions .counter
{
    padding: 0.1em 0.9em;
    margin-right: -0.5em;
    -webkit-border-radius: 1em;
    -moz-border-radius: 1em;
    border-radius: 1em;
    background: #000;
    color: #fff;
    font-weight: normal;
}

#translate-actions a:hover
{
    color: #000;
}

#translate-actions a:hover .counter
{
    background: #000 !important;
}

#translate-actions .translation-complete
{
    color: #090;
}

#translate-actions .translation-complete .counter
{
    background-color: #090;
}

#translate-actions .continue-translation
{
    color: #0489b7;
}

#translate-actions .continue-translation .counter
{
    background-color: #0489b7;
}

#translate-actions .review-suggestions
{
    color: #ba6;
}

#translate-actions .review-suggestions .counter
{
    background-color: #ba6;
}

#translate-actions .fix-errors
{
    color: #c30;
}

#translate-actions .fix-errors .counter
{
    background-color: #c30;
}

/* Breadcrumbs */

.breadcrumb
{
    font-size: 18px;
    font-weight: normal;
    visibility: hidden;
    margin-left: -5px;
}

.breadcrumb li
{
    float: left;
    display: inline;
}

html[dir="rtl"] .breadcrumb li
{
    float: right;
}

.breadcrumb li:before
{
    content: "/ ";
    font-weight: normal;
    color: #999;
}

.breadcrumb li:first-child:before
{
    content: normal;
}

.breadcrumb li.file-path
{
    font-weight: normal;
    font-size: 90%;
    color: #999;
}

.breadcrumb li.file-path span
{
    color: #000;
}

/* Tabs */

#tabs,
#file-tabs
{
    height: 34px;
}


#file-tabs
{
    border-bottom: 1px solid #d9d9d9;
}

#tabs li,
#file-tabs li
{
    float: left;
}

html[dir="rtl"] #tabs li,
html[dir="rtl"] #file-tabs li
{
    float: right;
}

#tabs a,
#file-tabs a
{
    background-color: inherit;
    border: 1px solid transparent;
    color: #999;
    display: block;
    height: 30px;
    line-height: 2.2;
    margin: 3px 4px 0;
    padding: 0 11px;
    text-decoration: none;
}

#tabs a:hover,
#file-tabs a:hover
{
    /* TODO: merge with active tabs */
    background-color: #fff !important;
    border-color: #d9d9d9 #d9d9d9 #fff;
    border-style: solid;
}

#tabs a.admintab,
#tabs.admin a,
#tabs a .admin,
.tags-add
{
    color: #c30 !important;
}
/* ... */

